--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="container text-center">
-<div class="container d-flex flex-row justify-content-center">
-    <div *ngFor="let elem of user" class="card m-2" style="width: 18rem;">
+<div class=" card-box container d-flex flex-row flex-wrap justify-content-center">
+    <div *ngFor="let elem of user" class="card m-2" id="card_sub" style="width: 18rem;">
         <img class="card-img-top mt-2" src="../../assets/img/profil.png">
         <div class="card-body">
           <h5 class="card-title"><span class="text-uppercase"> {{ elem.lastname }} </span>
