--- a/src/app/components/user-detail/user-detail.component.html
+++ b/src/app/components/user-detail/user-detail.component.html
@@ -1,6 +1,6 @@
-<div class="container text-center">
-  <h2 class="m-5 text-white bg-dark p-2 pb-3"> {{pageTitle}} </h2>
-  <table class="table table-striped">
+<div class="container m-5">
+  <h2 class="mb-5 text-white bg-dark p-2 pb-3 text-center"> {{pageTitle}} </h2>
+  <table class="mb-5 table table-striped text-center">
     <thead>
       <tr>
         <th scope="row">NOM</th>
@@ -18,5 +18,6 @@
       </tr>
     </tbody>
   </table>
+  <a class="btn btn-success" routerLink="/dashboard">Retour à la liste des abonnés</a>
 </div>
 
